# personal_assistant

./: .env.example  .gitignore  README.md  architecture.md  main.py  pyproject.toml
bot/: calendar_integration.py  config.py  handlers.py
